# hpa_single_cell_classification

./: .gitignore  README.md  config.yaml  eda.py  hpa-single-cell-image-classification.ipynb  main.py  pyproject.toml
src/: dataset.py  model.py  trainer.py
src/utils/: common.py  config.py  metrics.py
