[project]
name = "hpa-single-cell-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cellpose>=4.1.1",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "wandb>=0.17.0",
]
